fix: hide ugly scrollbars on firefox (#944)

--- a/app/renderer/components/Session/Session.css
+++ b/app/renderer/components/Session/Session.css
@@ -101,6 +101,7 @@
 }
 
 .scrollingTab {
+  scrollbar-width: none; /* -webkit-scrollbar for Firefox */
   overflow-y: scroll;
   height: 100%;
 }
